Add basic html for header section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
             <li><a href="">header link three</a></li>
         </ul>
     </div>
-    <div class="header-main"></div>
+    <div class="header-main">
+        <div class="header-main-left">
+            <div class="header-title">This website is awesome</div>
+            <div class="header-desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
+            <button>Sign up</button>
+        </div>
+        <img src="header.png" class="header-img" alt="Header image">
+    </div>
     <div class="section-gallery"></div>
     <div class="section-quote"></div>
     <div class="section-cta"></div>
