Add basic html for gallery section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
         </div>
         <img src="header.png" class="header-img" alt="Header image">
     </div>
-    <div class="section-gallery"></div>
+    <div class="section-gallery">
+        <h2>Some random information</h2>
+        <div class="gallery">
+            <div class="square"></div>
+            <p class="caption">this is some subtext under an illustration or image</p>
+
+            <div class="square"></div>
+            <p class="caption">this is some subtext under an illustration or image</p>
+
+            <div class="square"></div>
+            <p class="caption">this is some subtext under an illustration or image</p>
+
+            <div class="square"></div>
+            <p class="caption">this is some subtext under an illustration or image</p>
+        </div>
+    </div>
     <div class="section-quote"></div>
     <div class="section-cta"></div>
     <div class="footer"></div>
