--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             <p class="caption">this is some subtext under an illustration or image</p>
         </div>
     </div>
-    <div class="section-quote"></div>
+    <div class="section-quote">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="signature">Thor, God of Thunder</p>
+    </div>
     <div class="section-cta"></div>
     <div class="footer"></div>
 </body>
