--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="signature">Thor, God of Thunder</p>
     </div>
-    <div class="section-cta"></div>
+    <div class="section-cta">
+        <div class="card">
+            <p class="cta">Call to action! It's time!</p>
+            <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
+            <button class="cta-button">Sign up</button>
+        </div>
+    </div>
     <div class="footer"></div>
 </body>
 
