Add basic html for footer section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
             <button class="cta-button">Sign up</button>
         </div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">
+        <p>Copyright @ The Odin Project 2021</p>
+    </div>
 </body>
 
 </html>
