--- a/index.html
+++ b/index.html
@@ -9,21 +9,24 @@
 </head>
 
 <body>
-    <div class="header-bar">
-        <img src="logo.png" class="logo" alt="Header logo">
-        <ul class="header-links">
-            <li><a href="">header link one</a></li>
-            <li><a href="">header link two</a></li>
-            <li><a href="">header link three</a></li>
-        </ul>
-    </div>
-    <div class="header-main">
-        <div class="header-main-left">
-            <div class="header-title">This website is awesome</div>
-            <div class="header-desc">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast.</div>
-            <button>Sign up</button>
+    <div class="section-header">
+        <div class="header-bar">
+            <img src="logo.png" class="logo" alt="Header logo">
+            <ul class="header-links">
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
+            </ul>
         </div>
-        <img src="header.png" class="header-img" alt="Header image">
+        <div class="header-main">
+            <div class="header-main-left">
+                <div class="header-title">This website is awesome</div>
+                <div class="header-desc">This website has some subtext that goes here under the main title. It's smaller
+                    font and the color is lower contrast.</div>
+                <button>Sign up</button>
+            </div>
+            <img src="header.png" class="header-img" alt="Header image">
+        </div>
     </div>
     <div class="section-gallery">
         <h2>Some random information</h2>
@@ -42,7 +45,8 @@
         </div>
     </div>
     <div class="section-quote">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="signature">Thor, God of Thunder</p>
     </div>
     <div class="section-cta">
