Rename footer div class to section-footer for uniformity

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <button class="cta-button">Sign up</button>
         </div>
     </div>
-    <div class="footer">
+    <div class="section-footer">
         <p>Copyright @ The Odin Project 2021</p>
     </div>
 </body>
