Change header logo to p element

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="section-header">
         <div class="header-bar">
-            <img src="logo.png" class="logo" alt="Header logo">
+            <p class="header-logo">Header Logo</p>
             <ul class="header-links">
                 <li><a href="">header link one</a></li>
                 <li><a href="">header link two</a></li>
