Add section class to all sections
Allow them to be styled together

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="section-header">
+    <div class="section section-header">
         <div class="header-bar">
             <p class="header-logo">Header Logo</p>
             <ul class="header-links">
@@ -28,7 +28,7 @@
             <img src="header.png" class="header-img" alt="Header image">
         </div>
     </div>
-    <div class="section-gallery">
+    <div class="section section-gallery">
         <h2>Some random information</h2>
         <div class="gallery">
             <div class="square"></div>
@@ -44,19 +44,19 @@
             <p class="caption">this is some subtext under an illustration or image</p>
         </div>
     </div>
-    <div class="section-quote">
+    <div class="section section-quote">
         <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
             or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
         <p class="signature">Thor, God of Thunder</p>
     </div>
-    <div class="section-cta">
+    <div class="section section-cta">
         <div class="card">
             <p class="cta">Call to action! It's time!</p>
             <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
             <button class="cta-button">Sign up</button>
         </div>
     </div>
-    <div class="section-footer">
+    <div class="section section-footer">
         <p>Copyright @ The Odin Project 2021</p>
     </div>
 </body>
