--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     font and the color is lower contrast.</div>
                 <button>Sign up</button>
             </div>
-            <img src="header.png" class="header-img" alt="Header image">
+            <div class="header-img">this is a placeholder for an image</div>
         </div>
     </div>
     <div class="section section-gallery">
