Wrap gallery entries into single div

--- a/index.html
+++ b/index.html
@@ -31,17 +31,22 @@
     <div class="section section-gallery">
         <h2>Some random information</h2>
         <div class="gallery">
-            <div class="square"></div>
-            <p class="caption">this is some subtext under an illustration or image</p>
-
-            <div class="square"></div>
-            <p class="caption">this is some subtext under an illustration or image</p>
-
-            <div class="square"></div>
-            <p class="caption">this is some subtext under an illustration or image</p>
-
-            <div class="square"></div>
-            <p class="caption">this is some subtext under an illustration or image</p>
+            <div class="gallery-entry">
+                <div class="square"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="gallery-entry">
+                <div class="square"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="gallery-entry">
+                <div class="square"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="gallery-entry">
+                <div class="square"></div>
+                <p class="caption">this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
     <div class="section section-quote">
