--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         </div>
     </div>
     <div class="section section-quote">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        <p class="signature">Thor, God of Thunder</p>
+        <blockquote class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            or maybe people will actually read it. Who knows? All i know is that it looks nice.</blockquote>
+        <p class="signature">-Thor, God of Thunder</p>
     </div>
     <div class="section section-cta">
         <div class="card">
