Split card into left and right divs

--- a/index.html
+++ b/index.html
@@ -56,9 +56,13 @@
     </div>
     <div class="section section-cta">
         <div class="card">
-            <p class="cta">Call to action! It's time!</p>
-            <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
-            <button class="cta-button">Sign up</button>
+            <div class="card-left">
+                <p class="cta">Call to action! It's time!</p>
+                <p class="cta-desc">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div class="card-right">
+                <button class="cta-button">Sign up</button>
+            </div>
         </div>
     </div>
     <div class="section section-footer">
