--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
     </div>
     <div class="section section-quote">
-        <blockquote class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
-            or maybe people will actually read it. Who knows? All i know is that it looks nice.</blockquote>
+        <blockquote class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling
+            up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</blockquote>
         <p class="signature">-Thor, God of Thunder</p>
     </div>
     <div class="section section-cta">
